k8s/devsu-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: devsu-test
    yaml-version: "1.0"
  name: devsu-test
  namespace: devsu
spec:
  ports:
  - name: devsutest-port
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    k8s-app: devsu-test
  sessionAffinity: None
  type: ClusterIP
