k8s/devsu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    yaml-version: "1.0"
  name: devsu-ingress
  namespace: devsu
spec:
  defaultBackend:
    service:
      name: devsu-test
      port:
        number: 8000
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: devsu-test
            port:
              number: 8000
        path: /api
        pathType: Prefix
